AB#5006 add retry btn to failure-popup

--- a/interfaces/HO-Portal/src/app/program/payment-status-popup/payment-status-popup.component.html
+++ b/interfaces/HO-Portal/src/app/program/payment-status-popup/payment-status-popup.component.html
@@ -17,8 +17,18 @@
   color="light"
   class="ion-padding"
 >
-  <div *ngIf="content">
-    {{ content }}
+  <div *ngIf="content" [innerHTML]="content">
+  </div>
+  <div *ngIf="retryButton">
+    <br>
+    <ion-button (click)="retryPayment()">
+      {{ 'page.program.program-people-affected.payment-status-popup.retry'|translate }}
+    </ion-button>
+    <ion-spinner
+      *ngIf="isInProgress"
+      color="primary"
+      class="ion-margin-start"
+    ></ion-spinner>
   </div>
   <div *ngIf="imageUrl">
     <img [src]="imageUrl" alt="" style="width: 100%; height: auto;">
