AB#5020 add line to contact 121 team

--- a/interfaces/HO-Portal/src/app/program/payment-status-popup/payment-status-popup.component.html
+++ b/interfaces/HO-Portal/src/app/program/payment-status-popup/payment-status-popup.component.html
@@ -30,6 +30,8 @@
       class="ion-margin-start"
     ></ion-spinner>
   </div>
+  <div *ngIf="contentNotes" [innerHTML]="contentNotes">
+  </div>
   <div *ngIf="imageUrl">
     <img [src]="imageUrl" alt="" style="width: 100%; height: auto;">
   </div>
