feat: make logo configurable AB#4981

--- a/interfaces/Referral-App/src/app/tabs/tabs.page.html
+++ b/interfaces/Referral-App/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab-bar slot="top">
     <ion-tab-button tab="referral" color="primary" layout="label-hide">
       <ion-thumbnail>
-        <ion-img src="assets/icons/red_cross.png"></ion-img>
+        <ion-img [src]="getLogo()"></ion-img>
       </ion-thumbnail>
     </ion-tab-button>
   </ion-tab-bar>
