--- a/interfaces/Referral-App/src/app/referral/referral.page.scss
+++ b/interfaces/Referral-App/src/app/referral/referral.page.scss
@@ -26,3 +26,13 @@ a {
     color: #3171e0;
   }
 }
+
+ion-footer {
+  ion-button.main-screen-button {
+    white-space: pre-wrap;
+
+    ion-text {
+      margin-left: 4px;
+    }
+  }
+}
