--- a/interfaces/Referral-App/src/app/referral/referral.page.scss
+++ b/interfaces/Referral-App/src/app/referral/referral.page.scss
@@ -28,11 +28,18 @@ a {
 }
 
 ion-footer {
-  ion-button.main-screen-button {
-    white-space: pre-wrap;
+  ion-button {
+    &.main-screen-button {
+      white-space: pre-wrap;
 
-    ion-text {
-      margin-left: 4px;
+      ion-text {
+        margin-left: 4px;
+      }
+    }
+
+    ion-img.whatsapp-image {
+      height: 50px;
+      width: 50px;
     }
   }
 }
