AB#5010 Add (optional) confirm-message with min/max length to confirm-prompt

--- a/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
@@ -20,7 +20,7 @@
     (confirm)="applyAction($event)"
     [subHeader]="'page.program.program-people-affected.submit-warning'|translate"
     [message]="submitWarning.message"
-    [inputFields]="inputFields"
+    [inputProps]="getCurrentBulkAction().confirmConditions"
     class="ion-float-end"
   >
     {{ 'page.program.program-people-affected.apply-action'|translate }}
