--- a/interfaces/HO-Portal/src/app/shared/confirm-prompt/confirm-prompt.component.html
+++ b/interfaces/HO-Portal/src/app/shared/confirm-prompt/confirm-prompt.component.html
@@ -1,8 +1,9 @@
-<ion-button type="button"
-            [disabled]="disabled"
-            (click)="showPrompt()"
-            [size]="size"
-            [fill]="fill"
+<ion-button
+  type="button"
+  [disabled]="disabled"
+  (click)="showPrompt()"
+  [size]="size"
+  [fill]="fill"
 >
   <ng-content></ng-content>
 </ion-button>
