feat: replace capacity with what will you need

--- a/interfaces/Referral-App/src/app/components/offer/offer.component.html
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.html
@@ -80,11 +80,11 @@
         <pre class="ion-margin">{{ offer.offerAddress }}</pre>
       </ion-label>
     </ion-item>
-    <ion-item *ngIf="offer.offerCapacity">
+    <ion-item *ngIf="offer.offerWhatWillYouNeed">
       <ion-icon name="contacts" slot="start"></ion-icon>
       <ion-label>
-        Capacity:
-        <pre class="ion-margin">{{ offer.offerCapacity }}</pre>
+        What will you need?
+        <pre class="ion-margin">{{ offer.offerWhatWillYouNeed }}</pre>
       </ion-label>
     </ion-item>
     <ion-item *ngIf="offer.offerBasicRight">
