AB#5041 Change property/type that shows the confirmation-message

--- a/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
+++ b/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
@@ -29,7 +29,7 @@
     >
       <confirm-prompt
         (confirm)="deleteAidworker(row)"
-        [subHeader]="'page.program.manage-aidworkers.column-delete'|translate"
+        [message]="'page.program.manage-aidworkers.column-delete'|translate"
         size="small"
         fill="outline"
       >
