--- a/interfaces/HO-Portal/src/app/shared/input-prompt/input-prompt.component.html
+++ b/interfaces/HO-Portal/src/app/shared/input-prompt/input-prompt.component.html
@@ -20,10 +20,22 @@
   <h2 *ngIf="subHeader">
     {{ subHeader }}
   </h2>
-  <p *ngIf="message">
-    {{ message }}
-  </p>
-  <div *ngIf="inputProps">
+  <div
+    *ngIf="message"
+    [innerHTML]="message"
+    class="ion-margin-vertical"
+  ></div>
+
+  <div
+    *ngIf="inputProps"
+    class="ion-margin-vertical"
+  >
+    <div
+      *ngIf="inputProps.explanation"
+      [innerHTML]="inputProps.explanation"
+      class="ion-margin-vertical"
+    ></div>
+
     <ion-label>
       {{ 'common.confirm-message-label'|translate:{
           minLength: inputProps.minLength,
