feat: change fonts to Montserrat and Open Sans AB#4972

--- a/interfaces/Referral-App/src/app/components/offer/offer.component.scss
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.scss
@@ -39,6 +39,6 @@ ion-label {
 }
 
 pre {
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   white-space: pre-wrap;
 }
