--- a/interfaces/Referral-App/src/global.scss
+++ b/interfaces/Referral-App/src/global.scss
@@ -9,3 +9,6 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+// Google Fonts
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap');
