feat: font should fallback to Open Sans if Montserrat doesn't work AB#4972

--- a/interfaces/Referral-App/src/theme/variables.scss
+++ b/interfaces/Referral-App/src/theme/variables.scss
@@ -84,5 +84,5 @@
 
 ion-title,
 ion-card-title {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', 'Open Sans', sans-serif;
 }
