--- a/interfaces/Referral-App/src/theme/variables.scss
+++ b/interfaces/Referral-App/src/theme/variables.scss
@@ -10,28 +10,28 @@
   --ion-font-family: 'Open Sans', sans-serif;
 
   /** primary **/
-  --ion-color-primary: #2f4bfd;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #6200ee;
+  --ion-color-primary-rgb: 98, 0, 238;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #813de1;
+  --ion-color-primary-tint: #9d57ff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+  --ion-color-secondary: #ffffff;
+  --ion-color-secondary-rgb: 255, 255, 255;
+  --ion-color-secondary-contrast: rgb(1, 30, 96);
+  --ion-color-secondary-contrast-rgb: 1, 30, 96;
+  --ion-color-secondary-shade: #eeeeee;
+  --ion-color-secondary-tint: #ffffff;
 
   /** tertiary **/
-  --ion-color-tertiary: #7044ff;
-  --ion-color-tertiary-rgb: 112, 68, 255;
+  --ion-color-tertiary: #2f4bfd;
+  --ion-color-tertiary-rgb: 56, 128, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
-  --ion-color-tertiary-tint: #7e57ff;
+  --ion-color-tertiary-shade: #3171e0;
+  --ion-color-tertiary-tint: #4c8dff;
 
   /** success **/
   --ion-color-success: #10dc60;
@@ -58,12 +58,12 @@
   --ion-color-danger-tint: #f25454;
 
   /** dark **/
-  --ion-color-dark: #001e60;
+  --ion-color-dark: #011e60;
   --ion-color-dark-rgb: 0, 30, 96;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #001138;
-  --ion-color-dark-tint: #002370;
+  --ion-color-dark-shade: #011138;
+  --ion-color-dark-tint: #01246f;
 
   /** medium **/
   --ion-color-medium: #cccccc;
