Refactor(partially) layout/markup of (sub-)categories

--- a/interfaces/Referral-App/src/app/components/category/category.component.html
+++ b/interfaces/Referral-App/src/app/components/category/category.component.html
@@ -20,7 +20,7 @@
   class="category category--as-header"
 >
   <div class="category--icon">
-    <ion-card class="category--button">
+    <ion-card class="category--button ion-no-margin">
       <ion-card-header>
         <ion-img
           [src]="category.categoryIcon"
